--- a/web.html
+++ b/web.html
@@ -20,8 +20,7 @@
   <body>
     <header class="header">
       <div class="logo">
-        <img src="pictures/logo.jpeg" />
-        <p></p>
+        <p>ZanziBliss</p>
       </div>
 
       <div class="menu">
